# midpoint-password-agent-ad

./: .editorconfig  .gitignore  Installer.wixproj  License.rtf  MidPointPasswordFilter.sln  Package.wxs  README.md  ReadMe.txt  justfile  nuget.config
.github/actions/listener-preparation/: action.yml
.github/workflows/: build-installer.yml  listener-quality-checks.yml  sender-quality-check.yml
MidPointPasswordFilter/: MidPointPasswordFilter.cpp  MidPointPasswordFilter.def  MidPointPasswordFilter.vcxproj  MidPointPasswordFilter.vcxproj.filters  log.cpp  log.h  stdafx.cpp  stdafx.h
MidPointPasswordFilterEncryptor/: Microsoft Public License.txt  MidPointPasswordFilterEncryptor.cpp  MidPointPasswordFilterEncryptor.vcxproj  MidPointPasswordFilterEncryptor.vcxproj.filters  ReadMe.txt  Rijndael.cpp  Rijndael.h  stdafx.cpp  stdafx.h
MidPointPasswordFilterInstaller/: MidPointPasswordFilterInstaller.vdproj
MidPointPasswordFilterInstaller(x64)/: MidPointPasswordFilterInstaller(x64).vdproj
MidPointPasswordFilterInstaller.CustomInstaller/: Constants.cs  Encryptor.cs  MidPointPasswordFilterInstaller.CustomInstaller.csproj  MidPointPasswordFilterInstaller.Designer.cs  MidPointPasswordFilterInstaller.cs  RegistryEditor.cs  ScheduledTask.cs
MidPointPasswordFilterInstaller.CustomInstaller/Properties/: AssemblyInfo.cs
MidPointPasswordFilterProcessor/: ChangePassword.cs  ClientInspector.cs  Encryptor.cs  InspectorBehavior.cs  MidPointPasswordFilterProcessor.csproj  Program.cs  SecurityHeader.cs  UpdateDetails.cs  app.config
MidPointPasswordFilterProcessor/Properties/: AssemblyInfo.cs
MockServer/: CommandLineOptions.cs  MockServer.csproj  Program.cs  ResponderWithCounter.cs
cmake/: toolchain-mingw64.cmake
docs/: commands.md  dependencies.md  installation-and-administration.md  silent-install.md  update.md  wix-installer.md
docs/administration/: README.md
docs/development/: commands.md  wix-installer.md
docs/development/installation/: mac.md  windows-server.md
docs/development/sender/: README.md
docs/installation/: active-directory.md
docs/listener/: README.md
installation/: CheckInstallation.ps1  CreateAESKeyInRegistry.ps1  Install.ps1  MidPointPasswordAgent.reg  Uninstall.ps1
listener/: .clang-tidy  .clangd  CMakeLists.txt  PasswordFilter.def  dependencies.txt  vcpkg-licenses.sh  vcpkg.json
listener/src/: Common.h  PasswordFilter.cpp  PasswordFilter.h  PasswordFilterHelpers.h  WindowsRegisterHelpers.h  dllmain.cpp  pch.h  string_helper.h
listener/src/config/: app_config.cpp  app_config.h  config_watcher.cpp  config_watcher.h
listener/src/crypto/: crypto.cpp  crypto.h
listener/src/logger/: logger.cpp  logger.h
listener/src/queue/: password_event.cpp  password_event.h  queue_writer.cpp  queue_writer.h
listener/tests/: .clangd  CMakeLists.txt  ConfigTestHelpers.h  test_app_config.cpp  test_config_watcher.cpp  test_crypto_helper.cpp  test_password_filter.cpp  test_queue_writer.cpp
sample-installation/: README.adoc  get-ad-resource-status.sh  get-user-jack.sh  mail-notifications.txt  notify-password-change.json  notify-password-change.sh
sample-installation/pwd-agent-test-env/midpoint_server/container_files/mp-home/post-initial-objects/: 100-resource-ad.xml  150-role-ad-pwd-sync.xml  200-user-jack.xml  210-user-ad-pwd-sync.xml
samples/pwd-agent-test-env/: .env  docker-compose.yml
samples/pwd-agent-test-env/midpoint_server/container_files/mp-home/post-initial-objects/: 000-system-configuration.xml  210-user-ad-pwd-sync.xml
scripts/: updateMidpointPassword.ps1
sender/: Constants.cs  Directory.Build.props  GlobalSuppressions.cs  Program.cs  StartupConfig.cs  dependencies-tree.txt  dependencies.txt  nuget-tree.sh  sender.csproj
sender.DPAPI/: CustomAction.config  InstallerActions.cs  sender.DPAPI.csproj
sender.Tests/: ApplicationStateTests.cs  CryptoServiceTests.cs  KeyCleanupWorkerTests.cs  KeyRotationServiceTests.cs  KeyRotationWorkerTests.cs  LogRotationTests.cs  MidPointServiceTests.cs  MidpointMockTest.cs  SenderConfigurationFactoryTests.cs  SenderWorkerTests.cs  sender.Tests.csproj
sender.Tests/Mocks/: KeyRotationServiceMock.cs
sender/Configuration/: SenderConfiguration.cs  SenderConfigurationFactory.cs  SenderConfigurationProvider.cs  SenderJsonConfiguration.cs
sender/Exceptions/: MissingRegistryValueException.cs
sender/MultiPlatform/: InMemoryKeyProvider.cs  SimpleMidpointConfigurationBuilder.cs
sender/Properties/: launchSettings.json
sender/Services/Crypto/: CryptoService.cs  IKeyProvider.cs  WindowsKeyProvider.cs
sender/Services/KeyRotation/: IKeyRotationService.cs  KeyRotationService.cs
sender/Services/Logger/: AppLogger.cs  JsonLogFormatter.cs
sender/Services/MidPoint/: BasicAuthHandler.cs  IMidPointAuthHandler.cs  MidPointRateLimiter.cs  MidPointService.cs  MidPointSettings.cs  MidpointConfigurationBuilder.cs
sender/Services/Queue/: PasswordChangeEvent.cs  QueueService.cs  SenderJsonContext.cs
sender/Services/WindowsRegistry/: IWindowsRegistryProvider.cs  InMemoryRegistryProvider.cs  WindowsRegistryProvider.cs
sender/State/: ApplicationState.cs  ApplicationStateProvider.cs  IApplicationStateProvider.cs
sender/Worker/: KeyCleanupWorker.cs  KeyRotationWorker.cs  SenderWorker.cs
